# Ghost-Split

./: Anchor.toml  README.md
app/: package-lock.json  package.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/api/relay-join/: route.ts
app/src/components/: AppWalletProvider.tsx  CustomWalletButton.tsx  Dashboard.tsx  GroupView.tsx  NavbarWallet.tsx  WalletConnect.tsx
app/src/idl/: ghost_split.json
app/src/idl/types/: ghost_split.ts
app/src/lib/: ghostSplit.ts  groups.ts
programs/ghost-split/: Cargo.toml
programs/ghost-split/src/: accounts.rs  constants.rs  errors.rs  lib.rs  state.rs
programs/ghost-split/src/instructions/: add_expense.rs  close_group.rs  create_group.rs  delegate_ix.rs  join_group.rs  mark_settled.rs  mod.rs  remove_expense.rs
tests/: ghost-split.ts
